Closed Bug 1786249 Opened 2 years ago Closed 2 years ago

The Gap Sponsored tile is not recognized as sponsored in the "moz_historyvisits" table

Categories

(Firefox :: New Tab Page, defect)

Desktop
All
defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox105 --- verified
firefox106 --- verified

People

(Reporter: cmuntean, Assigned: daisuke)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Attached video gap sponsored.mp4

[Affected versions]:

  • Nightly 105.01a

[Affected Platforms]:

  • Mac 12.4
  • Windows 10 x64
  • Linux Mint 20

[Prerequisites]:

  • Have the "DB Browser for SQLite" software installed/extracted.
  • Have a new Firefox Profile created.
  • Have the "places.sqlite" file from the new profile directory opened in "DB Browser for SQLite".
  • Have a VPN set to US country.
  • Have Gap Sponsored tile displayed in the new tab page.

[Steps to reproduce]:

  1. Open the Nightly browser.
  2. Click on the Gap Sponsored tile.
  3. Focus the "DB Browser for SQLite", in "Browse Data" tab select "moz_historyvisits" table.
  4. Refresh the database and observe the last value added in the "source" column.

[Expected result]:

  • The source has value 1.

[Actual result]:

  • The source has value 0.

[Notes]:

  • Until now I have managed to reproduce this issue only with Gap Sponsored result. However, I am not sure if there are other sponsored tiles where this issue is reproducible. I will add a new comment if I find any.
  • Attached is a screen recording of the issue.

I have also managed to reproduce this issue with the Adidas Sponsored tile displayed while connected using a VPN to Germany country. So probably there might be multiple Sponsored tiles that are not recognized as sponsored in the "moz_historyvisits" table.

Assignee: nobody → daisuke
Status: NEW → ASSIGNED

I did more investigation and here are the results:

The following Sponsored tiles are NOT recognized as Sponsored results in the "moz_historyvisits":

  • Gap - here is the JSON file: link
  • Adidas - here is the JSON file: link
  • Vodafone - here is the JSON file: link

The following Sponsored tiles are correctly recognized as Sponsored results in the "moz_historyvisits":

  • Amazon
  • Nike
  • Trivago
  • Hotels
  • Homedepot
  • Wayfair
Blocks: 1787961
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch

This should likely be uplifted

Flags: needinfo?(daisuke)

Comment on attachment 9291950 [details]
Bug 1786249: Fixup sponsored link.

Beta/Release Uplift Approval Request

  • User impact if declined: As sponsored visits are not handled correctly, it affects the priority for displaying.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small change. And also this affects only sponsored visits.
  • String changes made/needed: None
  • Is Android affected?: No
Flags: needinfo?(daisuke)
Attachment #9291950 - Flags: approval-mozilla-beta?

Comment on attachment 9291950 [details]
Bug 1786249: Fixup sponsored link.

Approved for 105.0b6.

Attachment #9291950 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

We have verified this issue on the latest Nightly 106.0a1 build (Build ID: 20220831215447) on Windows 10 x64, macOS 11.6.6 and Linux Mint 20.

  • The issue is no longer reproducible the Gap, Adidas and Vodafone Sponsored tiles are recognized as sponsored and the "source" column is populated with value 1 after the sponsored tiles are clicked.
  • However, it seems that for Vodafone Sponsored tile, the triggeringPlaceId column is not populated if a link with the same base domain is opened. This behavior is tracked in Bug 1787961.

We will also verify this issue on Beta 105.0b6 as soon as the build is available.

(In reply to Cosmin Muntean [:cmuntean], Ecosystem QA from comment #12)

  • However, it seems that for Vodafone Sponsored tile, the triggeringPlaceId column is not populated if a
    link with the same base domain is opened. This behavior is tracked in Bug 1787961.

I took a look at this, and it was expected.
When we visit sponsored link, there should be one record whose triggeringPlaceId is null, at least. It represents the visit to the link itself specified by the tile's href.
For Gap case, two records will be added at one visit at least. One of them is a visit to the link itself. The other is a redirected visit. For the redirected visit, triggeringPlaceId should be recorded. This represents which sponsored link this visit is started by.

Thank you, Daisuke for clarifying this.

I have verified this issue on the latest Beta 105.0b6 (Build ID: 20220901185735) on Windows 10 x64, macOS 12.4 and Linux Mint 20x64.

  • The issue is no longer reproducible the Gap, Adidas and Vodafone Sponsored tiles are recognized as sponsored and the "source" column is populated with value 1 after the sponsored tiles are clicked.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: