Bug 1786249: Fixup sponsored link. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D155807